--- a/index.html
+++ b/index.html
@@ -298,62 +298,7 @@
         </div>
       </div>
     </section>
-
-
-    <section class="text-dark bg-light section-breathe">
-      <div class="container px-3 px-lg-4">
-        <div class="row align-items-center g-5">
-          <!-- LEFT -->
-          <div class="col-lg-6">
-            <div class="pe-lg-4">
-              <!-- <h6 class="fw-semibold text-danger mb-2">Sigurno i jednostavno</h6> -->
-              <h2 class="fw-semibold display-6 text-dark mb-3">Iznajmljivanje i prodaja metal detektorskih vrata i metal
-                detektora</h2>
-              <p class="lead text-secondary mb-4">
-                Naša firma nudi <strong>najnovije modele vrata metal detektora i ručnih uređaja za detekciju
-                  metala</strong>. Pored kupovine, omogućavamo i iznajmljivanje opreme – <strong class="accent">idealno
-                  rešenje za događaje, sajmove, koncerte i privremene projekte</strong>.
-              </p>
-              <br>
-              <dl class="mb-0">
-                <div class="position-relative ps-5 mb-4">
-                  <dt class="fw-semibold text-danger d-inline">
-                    <i class="bi bi-shield-lock position-absolute top-0 start-0 fs-5 text-danger"></i>
-                    Puna podrška
-                  </dt>
-                  <dd class="d-inline text-secondary ms-1">
-                    Pružamo potpunu tehničku podršku, od instalacije do održavanja, uz detaljnu obuku za korišćenje.
-                  </dd>
-                </div>
-                <div class="position-relative ps-5 mb-4">
-                  <dt class="fw-semibold text-danger d-inline">
-                    <i class="bi bi-check position-absolute top-0 start-0 fs-5 text-danger"></i>
-                    Završavate sve na jednom mestu
-                  </dt>
-                  <!-- <dd class="d-inline text-secondary ms-1">
-                Naši stručnjaci obezbeđuju dostavu i montažu.
-              </dd> -->
-                </div><br>
-                <a href="#" class="btn btn-outline-danger btn-lg rounded-pill fw-semibold px-3 mt-2">
-                  Pogledajte celu ponudu <i class="bi bi-arrow-right ms-1"></i>
-                </a>
-              </dl>
-            </div>
-          </div>
-
-          <!-- RIGHT: Image -->
-          <div class="col-lg-6">
-            <div class="text-center text-lg-end">
-              <img src="assets/images/iznajmljivanje-prodaja-za-aerodrom-metal-detektorska-vrata.png"
-                alt="Workflow illustration" class="img-fluid rounded shadow-sm">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- Alarmni sistemi sekcija -->
+ <!-- Alarmni sistemi sekcija -->
   <section class="hero hero--construction">
   <div class="container hero__layout">
     <div class="hero__content">
@@ -415,6 +360,60 @@
   </div>
 </section>
   <!-- Alarmni sistemi sekcija -->
+
+    <section class="text-dark bg-light section-breathe">
+      <div class="container px-3 px-lg-4">
+        <div class="row align-items-center g-5">
+          <!-- LEFT -->
+          <div class="col-lg-6">
+            <div class="pe-lg-4">
+              <!-- <h6 class="fw-semibold text-danger mb-2">Sigurno i jednostavno</h6> -->
+              <h2 class="fw-semibold display-6 text-dark mb-3">Iznajmljivanje i prodaja metal detektorskih vrata i metal
+                detektora</h2>
+              <p class="lead text-secondary mb-4">
+                Naša firma nudi <strong>najnovije modele vrata metal detektora i ručnih uređaja za detekciju
+                  metala</strong>. Pored kupovine, omogućavamo i iznajmljivanje opreme – <strong class="accent">idealno
+                  rešenje za događaje, sajmove, koncerte i privremene projekte</strong>.
+              </p>
+              <br>
+              <dl class="mb-0">
+                <div class="position-relative ps-5 mb-4">
+                  <dt class="fw-semibold text-danger d-inline">
+                    <i class="bi bi-shield-lock position-absolute top-0 start-0 fs-5 text-danger"></i>
+                    Puna podrška
+                  </dt>
+                  <dd class="d-inline text-secondary ms-1">
+                    Pružamo potpunu tehničku podršku, od instalacije do održavanja, uz detaljnu obuku za korišćenje.
+                  </dd>
+                </div>
+                <div class="position-relative ps-5 mb-4">
+                  <dt class="fw-semibold text-danger d-inline">
+                    <i class="bi bi-check position-absolute top-0 start-0 fs-5 text-danger"></i>
+                    Završavate sve na jednom mestu
+                  </dt>
+                  <!-- <dd class="d-inline text-secondary ms-1">
+                Naši stručnjaci obezbeđuju dostavu i montažu.
+              </dd> -->
+                </div><br>
+                <a href="#" class="btn btn-outline-danger btn-lg rounded-pill fw-semibold px-3 mt-2">
+                  Pogledajte celu ponudu <i class="bi bi-arrow-right ms-1"></i>
+                </a>
+              </dl>
+            </div>
+          </div>
+
+          <!-- RIGHT: Image -->
+          <div class="col-lg-6">
+            <div class="text-center text-lg-end">
+              <img src="assets/images/iznajmljivanje-prodaja-za-aerodrom-metal-detektorska-vrata.png"
+                alt="Workflow illustration" class="img-fluid rounded shadow-sm">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 
 
   <div class="clearfix"></div>
@@ -509,6 +508,7 @@
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="js/custom.js"></script>
+  <script defer src="js/forms.js"></script>
 </body>
 
 </html>
