--- a/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
+++ b/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
@@ -433,6 +433,7 @@
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="../js/custom.js"></script>
+  <script defer src="../js/forms.js"></script>
 </body>
 
 </html>
