--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -685,7 +685,8 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
       <!-- reCAPTCHA - kept outside fields container -->
       <div class="col-12 pt-20">
         <div class="form-label mb-2"><strong>Potvrdite da niste robot</strong> <span class="text-danger">*</span></div>
-        <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY" data-ms-captcha></div>
+        <!-- TODO: Replace YOUR_RECAPTCHA_SITE_KEY with your actual reCAPTCHA v2 site key -->
+        <div class="g-recaptcha" data-sitekey="6LcMoUwsAAAAAEeJE_zwm_-FMqAXfDdRXx0-r9G3" data-ms-captcha></div>
         <div class="invalid-feedback d-block mt-2" data-ms-captcha-error style="display:none;"></div>
       </div>
 
