Update forms and PHP configuration

--- a/Alarmni-sistemi-ugradnja-i-oprema.html
+++ b/Alarmni-sistemi-ugradnja-i-oprema.html
@@ -523,7 +523,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
               <!-- === FORM: Besplatna ponuda === -->
 <div class="row justify-content-center mb-80">
   <div class="col-lg-8">
-    <form id="offerForm" data-ms-form="alarm" action="/php/send-offer.php" method="POST" novalidate>
+    <form id="offerForm" data-ms-form="alarm" novalidate>
       
       <!-- Fields container - will be populated by forms.js -->
       <div class="row g-3" data-ms-fields></div>
