Remove defer from forms.js to ensure proper initialization

--- a/Alarmni-sistemi-ugradnja-i-oprema.html
+++ b/Alarmni-sistemi-ugradnja-i-oprema.html
@@ -656,7 +656,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   <script defer src="js/custom.js"></script>
-  <script defer src="js/forms.js"></script>
+  <script src="js/forms.js"></script>
 </body>
 
 </html>
