--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -720,7 +720,7 @@ Od početne analize rizika, preko izbora optimalnih kamera i snimača, do komple
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   <script defer src="js/custom.js"></script>
-  <script defer src="js/forms.js"></script>
+  <script src="js/forms.js"></script>
 </body>
 
 </html>
