--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -587,7 +587,7 @@ Od početne analize rizika, preko izbora optimalnih kamera i snimača, do komple
               <!-- === FORM: Besplatna ponuda === -->
 <div class="row justify-content-center mb-80">
   <div class="col-lg-8">
-    <form id="offerForm" data-ms-form="kamere" novalidate>
+    <form id="offerForm" data-ms-form="kamere" novalidate onsubmit="return false;">
       
       <!-- Fields container - will be populated by forms.js -->
       <div class="row g-3" data-ms-fields></div>
