--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -677,7 +677,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
 <!-- === FORM: Besplatna ponuda === -->
 <div class="row justify-content-center mb-80">
   <div class="col-lg-8">
-    <form id="offerForm" data-ms-form="metal" novalidate>
+    <form id="offerForm" data-ms-form="metal" novalidate onsubmit="return false;">
       
       <!-- Fields container - will be populated by forms.js -->
       <div class="row g-3" data-ms-fields></div>
