form style validation fixed

--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -683,10 +683,12 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
       <div class="row g-3" data-ms-fields></div>
 
       <!-- reCAPTCHA - kept outside fields container -->
-      <div class="col-12 pt-20">
-        <div class="form-label mb-2"><strong>Potvrdite da niste robot</strong> <span class="text-danger">*</span></div>
+      <div class="col-12 pt-20 text-center">
+        <div class="form-label mb-2"><strong>Proverite da niste robot</strong> <span class="text-danger">*</span></div>
         <!-- TODO: Replace YOUR_RECAPTCHA_SITE_KEY with your actual reCAPTCHA v2 site key -->
-        <div class="g-recaptcha" data-sitekey="6LcMoUwsAAAAAEeJE_zwm_-FMqAXfDdRXx0-r9G3" data-ms-captcha></div>
+        <div class="d-inline-block">
+          <div class="g-recaptcha" data-sitekey="6LcMoUwsAAAAAEeJE_zwm_-FMqAXfDdRXx0-r9G3" data-ms-captcha></div>
+        </div>
         <div class="invalid-feedback d-block mt-2" data-ms-captcha-error style="display:none;"></div>
       </div>
 
