Update all navigation: change 'Iznajmljivanje MD vrata' to 'Iznajmljivanje metal detektorskih vrata'

--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
                   <li class="d-xl-none">
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli MD
-                      vrata</a></li>
+                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli metal detektorskih vrata</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item"
-                      href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje MD vrata</a>
+                      href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje metal detektorskih vrata</a>
                   </li>
                 </ul>
               </li>
@@ -391,11 +390,11 @@
                     <i class="bi bi-check position-absolute top-0 start-0 fs-5 text-danger"></i>
                     Završavate sve na jednom mestu
                   </dt>
-                  <!-- <dd class="d-inline text-secondary ms-1">
+              <!-- <dd class="d-inline text-secondary ms-1">
                 Naši stručnjaci obezbeđuju dostavu i montažu.
               </dd> -->
                 </div><br>
-                <a href="#" class="btn btn-outline-danger btn-lg rounded-pill fw-semibold px-3 mt-2">
+                <a href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html" class="btn btn-outline-danger btn-lg rounded-pill fw-semibold px-3 mt-2">
                   Pogledajte celu ponudu <i class="bi bi-arrow-right ms-1"></i>
                 </a>
               </dl>
