--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -97,13 +97,12 @@
                   <li class="d-xl-none">
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli MD
-                      vrata</a></li>
+                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli metal detektorskih vrata</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
                   <li><a class="dropdown-item"
-                      href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje MD vrata</a>
+                      href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje metal detektorskih vrata</a>
                   </li>
                 </ul>
               </li>
