--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -99,7 +99,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
                   <li class="d-xl-none">
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="../kontrola-prolaza/modeli-metal-detektorska-vrata.html">Svi modeli metal detektorskih vrata</a></li>
+                  <li><a class="dropdown-item" href="../kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli metal detektorskih vrata</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
