--- a/protiv-pozarni-sistemi-oprema.html
+++ b/protiv-pozarni-sistemi-oprema.html
@@ -87,9 +87,9 @@
                   <li class="d-xl-none"><a class="dropdown-item"
                       href="kontrola-prolaza/metal-detektorska-vrata.html">Sve o metal detektorskim vratima</a></li>
                   <li class="d-xl-none"><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli MD vrata</a></li>
+                  <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli metal detektorskih vrata</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje MD vrata</a></li>
+                  <li><a class="dropdown-item" href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje metal detektorskih vrata</a></li>
                 </ul>
               </li>
               <li><hr class="dropdown-divider"></li>
