Update hero section: add 70vh cards with red-bordered badges, implement zoom effects, and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -260,7 +260,60 @@
 <section class="hero hero-split w-100 position-relative overflow-hidden text-white">
   <div class="container-fluid px-0">
     <div class="row g-0">
-    
+      
+      <!-- Column 1: Video nadzor -->
+      <div class="col-lg-4 hero-column">
+        <a href="kamere-za-video-nadzor-ugradnja-i-oprema.html" class="hero-column__link">
+          <div class="hero-column__inner" style="background-image: url('assets/images/kamere-za-video-nadzor-ugradnja-i-oprema.png');">
+            <div class="hero-column__content">
+              <h3 class="hero-column__title">Kompletna rešenja iz oblasti video nadzora</h3>
+              <h3 class="hero-column__subtitle">od projektovanja i ugradnje do održavanja.  </h3>
+              <div class="btn btn-outline-light btn-sm px-3 fw-semibold btn-straight hero-ghost">
+                Saznajte više <i class="bi bi-arrow-right ms-1"></i>
+              </div>
+            </div>
+          </div>
+          <div class="hero-column__badge">
+            13+ godina iskustva
+          </div>
+        </a>
+      </div>
+
+      <!-- Column 2: Gromobrani -->
+      <div class="col-lg-4 hero-column">
+        <a href="elektro-instalacije/gromobrani-ugradnja-i-dokumentacija-po-zakonu.html" class="hero-column__link">
+          <div class="hero-column__inner" style="background-image: url('assets/images/gromobrani-ugradnja-i-dokumentacija-po-zakonu.jpg');">
+            <div class="hero-column__content">
+              <h3 class="hero-column__title">Rešite zakonsku obavezu gromobrana</h3>
+              <h3 class="hero-column__subtitle"><strong>Sve na jednom mestu!</strong> Ugradnja i dokumentacija po zakonu.</h3>
+              <div class="btn btn-outline-light btn-sm px-3 fw-semibold btn-straight hero-ghost">
+                Saznajte više <i class="bi bi-arrow-right ms-1"></i>
+              </div>
+            </div>
+          </div>
+          <div class="hero-column__badge">
+            100% Zagarantovan kvalitet
+          </div>
+        </a>
+      </div>
+
+      <!-- Column 3: Alarmni sistemi -->
+      <div class="col-lg-4 hero-column">
+        <a href="Alarmni-sistemi-ugradnja-i-oprema.html" class="hero-column__link">
+          <div class="hero-column__inner" style="background-image: url('assets/images/Najbezbedniji-alarmi-i-alarmni-sistemi-ugradnja-oprema-i-servis-Maximus-security-srbija-min.png');">
+            <div class="hero-column__content">
+              <h3 class="hero-column__title">Najbezbedniji alarmi i alarmni sistemi </h3>
+              <h3 class="hero-column__subtitle">projektovanje, ugradnju i održavanje alarmnih sistema za domove ili poslovne prostore</h3>
+              <div class="btn btn-outline-light btn-sm px-3 fw-semibold btn-straight hero-ghost">
+                Saznajte više <i class="bi bi-arrow-right ms-1"></i>
+              </div>
+            </div>
+          </div>
+          <div class="hero-column__badge">
+            2.500+ Zadovoljnih klijenata
+          </div>
+        </a>
+      </div>
 
     </div>
   </div>
