--- a/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
+++ b/kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html
@@ -440,7 +440,7 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
     </div>
 
     <div class="text-center mt-4 pt-30">
-      <a target="_blank" href="modeli-metal-detektorska-vrata.html"
+      <a href="#ModeliMDVrata"
         class="btn btn-md px-4 fw-semibold btn-straight btn-black-fill">
         Pogledajte sve modele vrata <i class="bi bi-arrow-right ms-1"></i>
       </a>
@@ -558,10 +558,10 @@ Naši sistemi nude i mogućnost integracije sa video nadzorom i pametnim uređaj
     </div>
   </div>
 </section>
-<section class="bg-white text-dark section-breathe py-5">
+<section class="bg-white text-dark section-breathe py-5" id="ModeliMDVrata">
   <div class="container px-3 px-lg-4">
     <div class="text-center mb-50">
-      <h2 class="fw-semibold display-6 mb-3">Nudimo najbezbednije <br>modele matal detektorskih vrata</h2>
+      <h2  class="fw-semibold display-6 mb-3">Nudimo najbezbednije <br>modele matal detektorskih vrata</h2>
       <p class="lead text-secondary mb-0">Odaberite nivo detekcije koji najbolje odgovara vašim potrebama. <br>(Niste sigurni koja vrata da izaberete? <a href="tel:+38162421515">Pozovite nas  <i class="bi bi-telephone"></i></a> nas za savet.)</p>
     </div>
 
