Add product showcase with carousels and lightbox modal to parking rampe page

--- a/index.html
+++ b/index.html
@@ -537,10 +537,10 @@
           <small class="text-secondary">ISO Standard 9001:2015, ISO Standard 27001:2013. </small>
           <div class="d-flex align-items-center gap-3">
             <small class="text-secondary mb-0">Zapratite nas</small>
-            <a href="#" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
+            <a href="https://www.instagram.com/maximussecurity1515/" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
               <i class="bi bi-instagram fs-5"></i>
             </a>
-            <a href="#" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
+            <a href="https://www.facebook.com/profile.php?id=100049398056861" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
               <i class="bi bi-facebook fs-5"></i>
             </a>
           </div>
