--- a/tehnicka-resenja/audio-video-interfon-sistemi-za-kucu-poslvni-prostor.html
+++ b/tehnicka-resenja/audio-video-interfon-sistemi-za-kucu-poslvni-prostor.html
@@ -255,7 +255,7 @@
 
   <main>
     <!-- Hero Section (Dark Background with Image) -->
-    <section class="hero-landing w-100 position-relative overflow-hidden" style="background-image: url('https://swiftlane.com/static/36672e2418f39d1f72066737c1605bf0/04925/apartment-buzzer-swiftlane-.png'); background-size: cover; background-position: center center;">
+    <section class="hero-landing w-100 position-relative overflow-hidden" style="background-image: url('../assets/images/audio-video-interfon-sistemi-za-kucu-poslvni-prostor.jpg'); background-size: cover; background-position: center center;">
       <!-- Dark overlay -->
       <div style="position: absolute; inset: 0; background: rgba(0,0,0,0); z-index: 1;"></div>
       <div class="container" style="position: relative; z-index: 2;">
@@ -282,8 +282,7 @@
             <h1 class="fw-bold mb-2 lh-1 mt-20 text-white">Interfonski sistemi <br><span class="h1-below text-white" style="opacity: 0.9;">audio i video interfoni za kuću i poslovni prostor</span></h1>
             <br>    
             <h2 class="lead text-white mb-3" style="opacity: 0.95;">
-              Profesionalna ugradnja audio i video interfonskih sistema za stambene i poslovne objekte.
-              <strong class="accent">Sa više od 13 godina iskustva</strong>, pružamo kompletna rešenja za kontrolu pristupa širom Srbije.
+              <strong class="accent">Sa više od 13 godina iskustva</strong>, pružamo kompletnu ugradnju audio i video interfonskih sistema za stambene i poslovne objekte.
             </h2>
            
             <!-- stack on xs, row from sm and up -->
@@ -415,10 +414,10 @@
           <small class="text-secondary">ISO Standard 9001:2015, ISO Standard 27001:2013. </small>
           <div class="d-flex align-items-center gap-3">
             <small class="text-secondary mb-0">Zapratite nas</small>
-            <a href="#" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
+            <a href="https://www.instagram.com/maximussecurity1515/" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
               <i class="bi bi-instagram fs-5"></i>
             </a>
-            <a href="#" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
+            <a href="https://www.facebook.com/profile.php?id=100049398056861" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
               <i class="bi bi-facebook fs-5"></i>
             </a>
           </div>
