--- a/tehnicka-resenja/konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html
+++ b/tehnicka-resenja/konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html
@@ -256,8 +256,6 @@
   <main>
     <!-- Hero Section (Dark Background with Image) -->
     <section class="hero-landing w-100 position-relative overflow-hidden" style="background-image: url('https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-size: cover; background-position: center center;">
-      <!-- Dark overlay -->
-      <div style="position: absolute; inset: 0; background: rgba(0,0,0,0); z-index: 1;"></div>
       <div class="container" style="position: relative; z-index: 2;">
         <div class="row align-items-center hero-inner-landing px-3 mx-auto">
           <!-- LEFT: BIG HEADLINE -->
@@ -415,10 +413,10 @@
           <small class="text-secondary">ISO Standard 9001:2015, ISO Standard 27001:2013. </small>
           <div class="d-flex align-items-center gap-3">
             <small class="text-secondary mb-0">Zapratite nas</small>
-            <a href="#" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
+            <a href="https://www.instagram.com/maximussecurity1515/" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
               <i class="bi bi-instagram fs-5"></i>
             </a>
-            <a href="#" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
+            <a href="https://www.facebook.com/profile.php?id=100049398056861" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
               <i class="bi bi-facebook fs-5"></i>
             </a>
           </div>
