--- a/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
+++ b/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="../assets/images/share/parking-rampe-motori-za-automatske-klizne-krilne-kapije-share.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="https://www.example.com/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html" />
+  <meta property="og:url" content="https://maximussecurity.rs/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Maximus Security" />
 
