--- a/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
+++ b/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html
@@ -15,6 +15,7 @@
   <meta property="og:url" content="https://maximussecurity.rs/tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Maximus Security" />
+  <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID" />
 
   <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png">
