brisanje taba projektovanje iz nav

--- a/tehnicka-resenja/konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html
+++ b/tehnicka-resenja/konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html
@@ -216,38 +216,7 @@
 
           <!-- Tehnička rešenja (ACTIVE) -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active-nav-item" href="#" id="resenjaDrop" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Tehnička rešenja
-            </a>
 
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="resenjaDrop">
-              <!-- Mobile-only overview -->
-              <li class="d-xl-none"><a class="dropdown-item" href="#">Sve o tehničkim rešenjima</a></li>
-              <li class="d-xl-none">
-                <hr class="dropdown-divider">
-              </li>
-
-              <li><a class="dropdown-item active-nav-item-sub"
-                  href="konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html">Računarske
-                  mreže</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item"
-                  href="audio-video-interfon-sistemi-za-kucu-poslvni-prostor.html">Interfonski
-                  sistemi</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item"
-                  href="parking-rampe-motori-za-automatske-klizne-krilne-kapije.html">Rampe i motori za
-                  kapije</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-            </ul>
-          </li>
         </ul>
       </div>
     </nav>
@@ -256,6 +225,8 @@
   <main>
     <!-- Hero Section (Dark Background with Image) -->
     <section class="hero-landing w-100 position-relative overflow-hidden" style="background-image: url('https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1934&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-size: cover; background-position: center center;">
+      <!-- Dark overlay -->
+      <div style="position: absolute; inset: 0; background: rgba(0,0,0,0); z-index: 1;"></div>
       <div class="container" style="position: relative; z-index: 2;">
         <div class="row align-items-center hero-inner-landing px-3 mx-auto">
           <!-- LEFT: BIG HEADLINE -->
